[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsi-revert"
version = "0.1.0"
description = "RSI mean-reversion trader with trend filter, walk-forward validation, and Alpaca paper trading"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "alpaca-py==0.43.4",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "pyarrow==18.1.0",
    "pyyaml==6.0.2",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsi_revert*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
